fixtures/RH003/negative/before/skip_helpers.R
skip <- function(n, xs) {
  xs[-(seq_len(min(n, length(xs))))]
}
